istio/addon_components/grafana/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: istio-system
spec:
  gateways:
  - grafana-gateway
  hosts:
  - "grafana.kimdragon50.ml"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port:
          number: 3000
